lib/src/bindings_generated.dart

// ignore_for_file: non_constant_identifier_names, camel_case_types

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen` but manually recreated here due to LLVM missing on local dev machine.
import 'dart:ffi' as ffi;

class BetterLibtorrentFlutterBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  BetterLibtorrentFlutterBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  BetterLibtorrentFlutterBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
      : _lookup = lookup;

  void te_set_ca_bundle_path(ffi.Pointer<ffi.Char> pem_path) {
    return _te_set_ca_bundle_path(pem_path);
  }

  late final _te_set_ca_bundle_pathPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>('te_set_ca_bundle_path');
  late final _te_set_ca_bundle_path = _te_set_ca_bundle_pathPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<te_session_t> te_session_create(ffi.Pointer<ffi.Char> config_json) {
    return _te_session_create(config_json);
  }

  late final _te_session_createPtr = _lookup<ffi.NativeFunction<ffi.Pointer<te_session_t> Function(ffi.Pointer<ffi.Char>)>>('te_session_create');
  late final _te_session_create = _te_session_createPtr.asFunction<ffi.Pointer<te_session_t> Function(ffi.Pointer<ffi.Char>)>();

  void te_session_destroy(ffi.Pointer<te_session_t> s) {
    return _te_session_destroy(s);
  }

  late final _te_session_destroyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_session_t>)>>('te_session_destroy');
  late final _te_session_destroy = _te_session_destroyPtr.asFunction<void Function(ffi.Pointer<te_session_t>)>();

  void te_session_set_alert_callback(ffi.Pointer<te_session_t> s, ffi.Pointer<ffi.NativeFunction<te_alert_callbackFunction>> cb, ffi.Pointer<ffi.Void> user_data) {
    return _te_session_set_alert_callback(s, cb, user_data);
  }

  late final _te_session_set_alert_callbackPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_session_t>, ffi.Pointer<ffi.NativeFunction<te_alert_callbackFunction>>, ffi.Pointer<ffi.Void>)>>('te_session_set_alert_callback');
  late final _te_session_set_alert_callback = _te_session_set_alert_callbackPtr.asFunction<void Function(ffi.Pointer<te_session_t>, ffi.Pointer<ffi.NativeFunction<te_alert_callbackFunction>>, ffi.Pointer<ffi.Void>)>();

  void te_session_pause(ffi.Pointer<te_session_t> s) {
    return _te_session_pause(s);
  }

  late final _te_session_pausePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_session_t>)>>('te_session_pause');
  late final _te_session_pause = _te_session_pausePtr.asFunction<void Function(ffi.Pointer<te_session_t>)>();

  void te_session_resume(ffi.Pointer<te_session_t> s) {
    return _te_session_resume(s);
  }

  late final _te_session_resumePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_session_t>)>>('te_session_resume');
  late final _te_session_resume = _te_session_resumePtr.asFunction<void Function(ffi.Pointer<te_session_t>)>();

  ffi.Pointer<te_torrent_handle_t> te_add_magnet(ffi.Pointer<te_session_t> s, ffi.Pointer<ffi.Char> magnet_uri, ffi.Pointer<ffi.Char> save_path) {
    return _te_add_magnet(s, magnet_uri, save_path);
  }

  late final _te_add_magnetPtr = _lookup<ffi.NativeFunction<ffi.Pointer<te_torrent_handle_t> Function(ffi.Pointer<te_session_t>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('te_add_magnet');
  late final _te_add_magnet = _te_add_magnetPtr.asFunction<ffi.Pointer<te_torrent_handle_t> Function(ffi.Pointer<te_session_t>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<te_torrent_handle_t> te_add_torrent_file(ffi.Pointer<te_session_t> s, ffi.Pointer<ffi.Uint8> data, int len, ffi.Pointer<ffi.Char> save_path) {
    return _te_add_torrent_file(s, data, len, save_path);
  }

  late final _te_add_torrent_filePtr = _lookup<ffi.NativeFunction<ffi.Pointer<te_torrent_handle_t> Function(ffi.Pointer<te_session_t>, ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Pointer<ffi.Char>)>>('te_add_torrent_file');
  late final _te_add_torrent_file = _te_add_torrent_filePtr.asFunction<ffi.Pointer<te_torrent_handle_t> Function(ffi.Pointer<te_session_t>, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Char>)>();

  void te_torrent_pause(ffi.Pointer<te_torrent_handle_t> h) {
    return _te_torrent_pause(h);
  }

  late final _te_torrent_pausePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_torrent_handle_t>)>>('te_torrent_pause');
  late final _te_torrent_pause = _te_torrent_pausePtr.asFunction<void Function(ffi.Pointer<te_torrent_handle_t>)>();

  void te_torrent_resume(ffi.Pointer<te_torrent_handle_t> h) {
    return _te_torrent_resume(h);
  }

  late final _te_torrent_resumePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_torrent_handle_t>)>>('te_torrent_resume');
  late final _te_torrent_resume = _te_torrent_resumePtr.asFunction<void Function(ffi.Pointer<te_torrent_handle_t>)>();

  void te_torrent_remove(ffi.Pointer<te_session_t> s, ffi.Pointer<te_torrent_handle_t> h, bool delete_files) {
    return _te_torrent_remove(s, h, delete_files ? 1 : 0);
  }

  late final _te_torrent_removePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_session_t>, ffi.Pointer<te_torrent_handle_t>, ffi.Uint8)>>('te_torrent_remove');
  late final _te_torrent_remove = _te_torrent_removePtr.asFunction<void Function(ffi.Pointer<te_session_t>, ffi.Pointer<te_torrent_handle_t>, int)>();

  void te_torrent_set_sequential_download(ffi.Pointer<te_torrent_handle_t> h, bool enabled) {
    return _te_torrent_set_sequential_download(h, enabled ? 1 : 0);
  }

  late final _te_torrent_set_sequential_downloadPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_torrent_handle_t>, ffi.Uint8)>>('te_torrent_set_sequential_download');
  late final _te_torrent_set_sequential_download = _te_torrent_set_sequential_downloadPtr.asFunction<void Function(ffi.Pointer<te_torrent_handle_t>, int)>();

  void te_torrent_set_file_priority(ffi.Pointer<te_torrent_handle_t> h, int file_index, int priority) {
    return _te_torrent_set_file_priority(h, file_index, priority);
  }

  late final _te_torrent_set_file_priorityPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_torrent_handle_t>, ffi.Int32, ffi.Int32)>>('te_torrent_set_file_priority');
  late final _te_torrent_set_file_priority = _te_torrent_set_file_priorityPtr.asFunction<void Function(ffi.Pointer<te_torrent_handle_t>, int, int)>();

  void te_torrent_set_piece_deadline(ffi.Pointer<te_torrent_handle_t> h, int piece_index, int deadline, int flags) {
    return _te_torrent_set_piece_deadline(h, piece_index, deadline, flags);
  }

  late final _te_torrent_set_piece_deadlinePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<te_torrent_handle_t>, ffi.Int32, ffi.Int32, ffi.Int32)>>('te_torrent_set_piece_deadline');
  late final _te_torrent_set_piece_deadline = _te_torrent_set_piece_deadlinePtr.asFunction<void Function(ffi.Pointer<te_torrent_handle_t>, int, int, int)>();
}

final class te_session_t extends ffi.Opaque {}
final class te_torrent_handle_t extends ffi.Opaque {}

typedef te_alert_callbackFunction = ffi.Void Function(ffi.Int32 alert_type, ffi.Pointer<ffi.Char> json_payload, ffi.Pointer<ffi.Void> user_data);
